# ebook_homebrew_protobuf

./: Cargo.toml  README.md
client/: client.py  upload_image_pb2.py
proto/: upload_image.proto
src/: main.rs  routes.rs
src/controllers/: index.rs  mod.rs  proto.rs
